kustomize/clusters/vader/monitoring/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service

spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - name: http
      port: 80
      targetPort: http
