kustomize/clusters/vader/monitoring/grafana/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`grafana.feldman.in`)
      kind: Rule
      services:
        - name: grafana-service
          port: 80
  tls:
    secretName: grafana-feldman-in-tls
